// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment 1`] = `
<div
  className="bcs-comment-container"
>
  <div
    className="bcs-comment"
  >
    <Component
      className="bcs-comment-avatar"
      user={
        Object {
          "id": 10,
          "name": "50 Cent",
        }
      }
    />
    <div
      className="bcs-comment-content"
    >
      <div
        className="bcs-comment-headline"
      >
        <UserLink
          className="bcs-comment-user-name"
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          position="top-center"
          text={
            <FormattedMessage
              defaultMessage="{time, date, full} at {time, time, short}"
              id="be.contentSidebar.activityFeed.comment.commentPostedFullDateTime"
              values={
                Object {
                  "time": 1506534041000,
                }
              }
            />
          }
          theme="default"
        >
          <small
            className="bcs-comment-created-at"
          >
            <ReadableTime
              alwaysShowTime={true}
              relativeThreshold={0}
              timestamp={1506534041000}
            />
          </small>
        </Tooltip>
      </div>
      <CommentText
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </div>
  </div>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment when translation is enabled 1`] = `
<div
  className="bcs-comment-container"
>
  <div
    className="bcs-comment"
  >
    <Component
      className="bcs-comment-avatar"
      user={
        Object {
          "id": 10,
          "name": "50 Cent",
        }
      }
    />
    <div
      className="bcs-comment-content"
    >
      <div
        className="bcs-comment-headline"
      >
        <UserLink
          className="bcs-comment-user-name"
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          position="top-center"
          text={
            <FormattedMessage
              defaultMessage="{time, date, full} at {time, time, short}"
              id="be.contentSidebar.activityFeed.comment.commentPostedFullDateTime"
              values={
                Object {
                  "time": 1506534041000,
                }
              }
            />
          }
          theme="default"
        >
          <small
            className="bcs-comment-created-at"
          >
            <ReadableTime
              alwaysShowTime={true}
              relativeThreshold={0}
              timestamp={1506534041000}
            />
          </small>
        </Tooltip>
      </div>
      <CommentText
        id="123"
        onTranslate={[MockFunction]}
        tagged_message="test"
        translationEnabled={true}
        translationFailed={null}
      />
    </div>
  </div>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render an error when one is defined 1`] = `
<div
  className="bcs-comment-container"
>
  <div
    className="bcs-comment bcs-is-pending"
  >
    <Component
      className="bcs-comment-avatar"
      user={
        Object {
          "id": 10,
          "name": "50 Cent",
        }
      }
    />
    <div
      className="bcs-comment-content"
    >
      <div
        className="bcs-comment-headline"
      >
        <UserLink
          className="bcs-comment-user-name"
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          position="top-center"
          text={
            <FormattedMessage
              defaultMessage="{time, date, full} at {time, time, short}"
              id="be.contentSidebar.activityFeed.comment.commentPostedFullDateTime"
              values={
                Object {
                  "time": 1506534041000,
                }
              }
            />
          }
          theme="default"
        >
          <small
            className="bcs-comment-created-at"
          >
            <ReadableTime
              alwaysShowTime={true}
              relativeThreshold={0}
              timestamp={1506534041000}
            />
          </small>
        </Tooltip>
      </div>
      <CommentText
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={true}
      />
    </div>
  </div>
  <CommentInlineError
    message="errorrrrr"
    title="error"
  />
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render commenter as a link 1`] = `
<div
  className="bcs-comment-container"
>
  <div
    className="bcs-comment"
  >
    <Component
      className="bcs-comment-avatar"
      user={
        Object {
          "id": 10,
          "name": "50 Cent",
        }
      }
    />
    <div
      className="bcs-comment-content"
    >
      <div
        className="bcs-comment-headline"
      >
        <UserLink
          className="bcs-comment-user-name"
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          position="top-center"
          text={
            <FormattedMessage
              defaultMessage="{time, date, full} at {time, time, short}"
              id="be.contentSidebar.activityFeed.comment.commentPostedFullDateTime"
              values={
                Object {
                  "time": 1506534041000,
                }
              }
            />
          }
          theme="default"
        >
          <small
            className="bcs-comment-created-at"
          >
            <ReadableTime
              alwaysShowTime={true}
              relativeThreshold={0}
              timestamp={1506534041000}
            />
          </small>
        </Tooltip>
      </div>
      <CommentText
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </div>
  </div>
</div>
`;
